--- a/forum_style.css
+++ b/forum_style.css
@@ -7,6 +7,10 @@ body{
 .pref{
   padding-left: 400px;
 }
+table, tr,th, td {
+
+   border: 1px solid black;
+}
 .wrapper{
 margin-left: 300px;
 margin-right: 200px;
@@ -55,6 +59,9 @@ margin-bottom: 50px;
   width: 300px;
   margin-left: 10px;
   background-color: white;
+  color:black;
+  font-family: sans-serif;
+
 
 }
 
@@ -62,4 +69,38 @@ margin-bottom: 50px;
   width:1150px;
   margin-left: 10px;
   background-color: white;
+}
+
+.reply{
+
+/* margin-left: px; */
+width: 500px;
+
+}
+.rtext{
+
+  color: #43484f;
+}
+.has{
+  background-color: #c5d1e2;
+  border-radius: 100px;
+}
+.wel{
+
+  padding-left: 80px;
+}
+.questionin{
+  border: none;
+  margin-top: 30px;
+  border-radius: 30px;
+  background-color: #babec4;
+  margin-left: 600px;
+  margin-bottom: 80px;
+  padding: 10px 10px 10px 10px;
+  width: 650px;
+  font-size: 30px;
+}
+.questionc{
+  background-color: #084baf;
+
 }
