sructure change & server setup

--- a/Server/views/Public/Dashboard/Forum/forum_ask.hbs
+++ b/Server/views/Public/Dashboard/Forum/forum_ask.hbs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="forum_style.css">
+    <link rel="stylesheet" href="/Dashboard/Forum/forum_style.css">
     <meta charset="utf-8">
     <title>ASK PAGE</title>
   </head>
-  <body background="forum.jpg">
-<form class="has" action="forum_home.html" method="post">
+  <body background="/Dashboard/Forum/forum.jpg">
+<form class="has" action="/Dashboard/Forum/forum_home.html" method="post">
   <br>
 <div class="wel" style="font-family: sans-serif; ">
   <h3>You are asking your first question!</h3>
@@ -35,6 +35,6 @@
 <br>
 
 </form>
-      
+
   </body>
 </html>
