--- a/Server/views/Public/Dashboard/Forum/forum_home.hbs
+++ b/Server/views/Public/Dashboard/Forum/forum_home.hbs
@@ -2,19 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="forum_style.css">
+    <link rel="stylesheet" href="/Dashboard/Forum/forum_style.css">
+
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Forum Home Page</title>
   </head>
-  <body background="forum.jpg">
-  <a style="padding-left: 30px;padding-top: 30px;" href="forum_ask.html"><button style=" padding-right: 30px;padding-bottom: 20px;padding-left: 30px;padding-top: 20px;heigth: 100px; width: 160px; color : white; background-color : #0d71e2;" type="button" name="button">Ask a Question</button></a>
+  <body background="/Dashboard/Forum/forum.jpg">
+  <a style="padding-left: 30px;padding-top: 30px;" href="/Dashboard/Forum/forum_ask.html"><button style=" padding-right: 30px;padding-bottom: 20px;padding-left: 30px;padding-top: 20px;heigth: 100px; width: 160px; color : white; background-color : #0d71e2;" type="button" name="button">Ask a Question</button></a>
 <br>
   <select style="margin-top:20px" onchange="location = this.value;" >
   <option >Quick Access</option>
-  <option value="forum_ask.html">Compose Question</option>
+  <option value="/Dashboard/Forum/forum_ask.html">Compose Question</option>
   <option value="#">Forum Home</a></option>
-  <option value="chatassis.html"><a href="">Chat Assistant</option>
-  <option value="index.html">Frequently Asked Questions</option>
+  <option value="/Dashboard/Forum/chatassis.html"><a href="">Chat Assistant</option>
+  <option value="/Dashboard/Forum/index.html">Frequently Asked Questions</option>
 </select>
 <div class="pref">
   Filter:
