--- a/Server/views/Public/Dashboard/Forum/index.hbs
+++ b/Server/views/Public/Dashboard/Forum/index.hbs
@@ -7,7 +7,7 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="styling.css">
+    <link rel="stylesheet" href="/Dashboard/Forum/styling.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta charset="utf-8">
     <title>FAQ Page</title>
@@ -53,7 +53,7 @@ National Pension System(NPS)
 Qualifying Service
 </button>
 <div id="content3"><ul>
-  
+
   <li><a href="#"><h4> Does all leave period qualify for pension and gratuity?</h4></a></li>
 <li><a href="#"> <h4> Is the benefit of counting of past service under Rule 19  available to ex-serviceman re-employed to civil service / post?</h4> </a></li>
 <li><a href="#"><h4> What happens to the past service of a Govt. servant (appointed before 1.1.2004) who resigns to take up, with proper permission, another appointment under the Govt.?</h4> </a></li>
@@ -92,4 +92,3 @@ function myFunction2() {
   <center><a href="forum_home.html"><h3>Click to go to Forums Page</h3></a> </center>
   </body>
 </html>
-
