--- a/Server/views/Public/Home/home.hbs
+++ b/Server/views/Public/Home/home.hbs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html><head><link rel="shortcut icon" href="../favicon.ico" />
+<html><head><link rel="shortcut icon" href="/Home/favicon.ico" />
 <title>Pension Portal</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="home.css">
+<link rel="stylesheet" href="/Home/home.css">
 <link rel="stylesheet" href="home1.css">
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
@@ -18,7 +18,7 @@ body {font-size:16px;}
 <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
   <div class="w3-container">
-    <h6><a href="./Aunthentication/Login.html">Login</a><br><a href="./Aunthentication/Signup.html">SignUp</a></h6>
+    <h6><a href="/login">Login</a><br><a href="/signup">SignUp</a></h6>
     <h6 class="w3-padding-64"><b>Pension And Life Insurance Webportal</b></h6>
   </div>
   <div class="w3-bar-block">
@@ -27,12 +27,12 @@ body {font-size:16px;}
     <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Organisation</a>
     <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">All about Pension</a>
     <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Pension Payment Scheme</a>
-    <a href="../Dashboard/Forum/index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">FAQ</a>
+    <a href="/FAQ" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">FAQ</a>
     <a href="../Dashboard/Forum/forum_home.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Forum</a>
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
 
-    <a href="./Aunthentication/Login.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Login</a>
-    <a href="./Aunthentication/Signup.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Signup</a>
+    <a href="/login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Login</a>
+    <a href="/signup" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Signup</a>
 
   </div>
 </nav>
@@ -54,14 +54,14 @@ body {font-size:16px;}
 
 
   <div class="w3-container" style="margin-top:80px" id="showcase">
-    <h1 class="w3-jumbo"><b><img src="1.png" alt="" align="left" width="150px" height="200px">Pension And Life Insurance Webportal<br>Government of India</b></h1>
+    <h1 class="w3-jumbo"><b><img src="/Home/1.png" alt="" align="left" width="150px" height="200px">Pension And Life Insurance Webportal<br>Government of India</b></h1>
   </div>
   <div>
     <br>
     <br>
     <br>
     <h1 class="w3-xxxlarge w3-text-red"><b>Showcase.</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
+    <hr style="width:500px;border:5px solid red" class="w3-round">
   </div>
 
   <!-- Photo grid (modal) -->
@@ -86,7 +86,7 @@ body {font-size:16px;}
   <!-- Services -->
   <div class="w3-container" id="services" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Organisation</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
+    <hr style="width:500px;border:5px solid red" class="w3-round">
       <p>WThe Department of Pension & Pensioners' Welfare is the nodal department for formulation of policies relating to pension and other retirement benefits of Central Govt. employees covered under CCS (Pension) Rules, 1972 Apart from formulation of pension policy for the Central Govt. Pensioners/Family Pensioners, it also seeks to promote pensioners welfare and serves as a forum for the redressal of Pensioners' grievances.
 
 However, the pensioners of Ministries of Railways and Defence are governed by their respective pension rules having their independent administrative set up. The employees working in the establishments belonging to the class of industries/ other establishment listed in the schedule appended to EPF & MP Act.1950 are covered under EPS Scheme administered by Ministry of Labour. Further, the pensionary matters of those who joined/ would join Central Government on or after 1.1.2004, are dealt by Ministry of Finance under New Pension scheme
@@ -96,7 +96,7 @@ However, the pensioners of Ministries of Railways and Defence are governed by th
   <!-- Designers -->
   <div class="w3-container" id="designers" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>All About Pension</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
+    <hr style="width:500px;border:5px solid red" class="w3-round">
     <p>The best team in the world.</p>
     <p>Superannuation
 A superannuation pension shall be granted to a Government servant who is retired on his attaining the age of superannuation.
@@ -170,7 +170,7 @@ If the son or daughter, of a Government servant is suffering from any disorder o
   <!-- Packages / Pricing Tables -->
   <div class="w3-container" id="packages" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Pension Payment Scheme.</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
+    <hr style="width:500px;border:5px solid red" class="w3-round">
     <p>Swatantra Sainik Samman Pension Scheme, 1980 (Salient Features)
 Scheme for payment of pensions to Central Government Civil pensioners through authorised Banks
 Defined Contribution Pension Scheme (National Pension System)
