--- a/Server/views/Public/Dashboard/Forum/chatassis.hbs
+++ b/Server/views/Public/Dashboard/Forum/chatassis.hbs
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Chat Assistant</title>
-    <link rel="stylesheet" href="chats.css">
+    <link rel="stylesheet" href="/Dashboard/Forum/chats.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
-  <body background="chatwall3.jpg">
+  <body background="/Dashboard/Forum/chatwall3.jpg">
 
     <div class="head" style="background-color:#2e0049">
       <br>
@@ -16,25 +16,25 @@
 
     <div class="chat_space">
       <div class="container">
- <img src="/w3images/bandmember.jpg" alt="Avatar">
+ <img src="/Dashboard/Forum//w3images/bandmember.jpg" alt="Avatar">
  <p>Hello. How are you today?</p>
  <span class="time-right">11:00</span>
 </div>
 
 <div class="container darker">
- <img src="/w3images/avatar_g2.jpg" alt="Avatar" class="right">
+ <img src="/Dashboard/Forum//w3images/avatar_g2.jpg" alt="Avatar" class="right">
  <p>Hey! I'm fine. Thanks for asking!</p>
  <span class="time-left">11:01</span>
 </div>
 
 <div class="container">
- <img src="/w3images/bandmember.jpg" alt="Avatar">
+ <img src="/Dashboard/Forum//w3images/bandmember.jpg" alt="Avatar">
  <p>Sweet! So, what do you wanna do today?</p>
  <span class="time-right">11:02</span>
 </div>
 
 <div class="container darker">
- <img src="/w3images/avatar_g2.jpg" alt="Avatar" class="right">
+ <img src="/Dashboard/Forum//w3images/avatar_g2.jpg" alt="Avatar" class="right">
  <p>Nah, I dunno. Play soccer.. or learn more coding perhaps?</p>
  <span class="time-left">11:05</span>
 </div>
@@ -44,7 +44,7 @@
       <input placeholder="Type a message" style=" font-size: 20px;height: 35px;width: 550px;"type="text" name="" value="">
       <button class="w3-button w3-xlarge w3-circle w3-teal">Send</button>
     </div>
-    <center><a href="forum_home.html"><h3 style="color: white;">Back to Forums Page</h3></a> </center>
+    <center><a href="/Dashboard/Forum/forum_home.html"><h3 style="color: white;">Back to Forums Page</h3></a> </center>
 
   </body>
 </html>
