--- a/Server/views/Public/Home/Aunthentication/Login.hbs
+++ b/Server/views/Public/Home/Aunthentication/Login.hbs
@@ -7,16 +7,16 @@
     <head>
         <meta charset="UTF-8" />
         <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  -->
-        <link rel="shortcut icon" href="../../favicon.ico" />
+        <link rel="shortcut icon" href="/Home/favicon.ico" />
         <title>Pension Portal</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Login and Registration Form with HTML5 and CSS3" />
         <meta name="keywords" content="html5, css3, form, switch, animation, :target, pseudo-class" />
         <meta name="author" content="Codrops" />
         <link rel="shortcut icon" href="../favicon.ico">
-        <link rel="stylesheet" type="text/css" href="css/demo.css" />
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel="stylesheet" type="text/css" href="css/animate-custom.css" />
+        <link rel="stylesheet" type="text/css" href="Home/Aunthentication/css/demo.css" />
+        <link rel="stylesheet" type="text/css" href="Home/Aunthentication/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="Home/Aunthentication/css/animate-custom.css" />
     </head>
     <body>
         <div class="container">
@@ -38,7 +38,7 @@
                     <a class="hiddenanchor" id="tologin"></a>
                     <div id="wrapper">
                         <div id="login" class="animate form">
-                            <form  action="mysuperscript.php" autocomplete="on">
+                            <form  action="/otp" autocomplete="on">
                                 <h1>Log in</h1>
                                 <p>
                                     <label for="username" class="uname" data-icon="u" > Your email or username </label>
@@ -59,9 +59,9 @@
 								</p>
                                 <p class="change_link">
                   Go Back Home
-                  <a href="../home.html" class="to_register">Home</a>
+                  <a href="/home" class="to_register">Home</a>
 									Not a member yet ?
-									<a href="Signup.html" class="to_register">Join us</a>
+									<a href="/signup" class="to_register">Join us</a>
 								</p>
                             </form>
                         </div>
