--- a/Server/views/Public/Home/Aunthentication/otp.hbs
+++ b/Server/views/Public/Home/Aunthentication/otp.hbs
@@ -6,7 +6,7 @@
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="UTF-8" />
-        <link rel="shortcut icon" href="../../favicon.ico" />
+        <link rel="shortcut icon" href="/Home/favicon.ico" />
         <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  -->
         <title>Pension Portal</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,9 +14,9 @@
         <meta name="keywords" content="html5, css3, form, switch, animation, :target, pseudo-class" />
         <meta name="author" content="Codrops" />
         <link rel="shortcut icon" href="../favicon.ico">
-        <link rel="stylesheet" type="text/css" href="css/demo.css" />
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel="stylesheet" type="text/css" href="css/animate-custom.css" />
+        <link rel="stylesheet" type="text/css" href="Home/Aunthentication/css/demo.css" />
+        <link rel="stylesheet" type="text/css" href="Home/Aunthentication/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="Home/Aunthentication/css/animate-custom.css" />
     </head>
     <body>
         <div class="container">
@@ -38,32 +38,21 @@
                     <a class="hiddenanchor" id="tologin"></a>
                     <div id="wrapper">
                         <div id="login" class="animate form">
-                            <form  action="mysuperscript.php" autocomplete="on">
-                                      <h1> Sign up </h1>
+                            <form  action="www.google.com" autocomplete="on">
+                                      <h1> OTP Verification </h1>
                                       <p>
-                                          <label for="usernamesignup" class="uname" data-icon="u">Your username</label>
-                                          <input id="usernamesignup" name="usernamesignup" required="required" type="text" placeholder="mysuperusername690" />
+                                          <label for="otp" class="uname" data-icon="u">OTP sent to your email id</label>
+                                          <input id="usernamesignup" name="otp" required="required" type="text" placeholder="OTP HERE" />
                                       </p>
-                                      <p>
-                                          <label for="emailsignup" class="youmail" data-icon="e" > Your email</label>
-                                          <input id="emailsignup" name="emailsignup" required="required" type="email" placeholder="mysupermail@mail.com"/>
-                                      </p>
-                                      <p>
-                                          <label for="passwordsignup" class="youpasswd" data-icon="p">Your password </label>
-                                          <input id="passwordsignup" name="passwordsignup" required="required" type="password" placeholder="eg. X8df!90EO"/>
-                                      </p>
-                                      <p>
-                                          <label for="passwordsignup_confirm" class="youpasswd" data-icon="p">Please confirm your password </label>
-                                          <input id="passwordsignup_confirm" name="passwordsignup_confirm" required="required" type="password" placeholder="eg. X8df!90EO"/>
-                                      </p>
+
                                       <p class="signin button">
                         <input type="submit" value="Sign up"/>
                       </p>
                                       <p class="change_link">
                         Go Back Home
-                        <a href="../home.html" class="to_register">Home</a>
-                         A member ?
-                        <a href="Login.html" class="to_register"> Go and log in </a>
+                        <a href="/home" class="to_register">Home</a>
+                         Resend?
+                        <a href="/login" class="to_register"> Resend </a>
                       </p>
 
 
