--- a/Server/views/Public/Dashboard/Forum/forum_ask.hbs
+++ b/Server/views/Public/Dashboard/Forum/forum_ask.hbs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="/Dashboard/Forum/forum_style.css">
+    <link rel="shortcut icon" href="image/favicon.ico" >
+    <link rel="stylesheet" href="css/forum_style.css">
     <meta charset="utf-8">
     <title>ASK PAGE</title>
   </head>
-  <body background="/Dashboard/Forum/forum.jpg">
-<form class="has" action="/Dashboard/Forum/forum_home.html" method="post">
+  <body background="image/forum.jpg">
+<form class="has" action="forum_home.hbs" method="post">
   <br>
 <div class="wel" style="font-family: sans-serif; ">
   <h3>You are asking your first question!</h3>
@@ -27,7 +28,7 @@
 </div>
 <br>
 <br>
-<center><a href="forum_home.html"><h3>Back to Forums Page</h3></a> </center>
+<center><a href="forum_home.hbs"><h3>Back to Forums Page</h3></a> </center>
 
 <br>
 <br>
