--- a/Server/views/Public/Dashboard/Forum/index.hbs
+++ b/Server/views/Public/Dashboard/Forum/index.hbs
@@ -1,26 +1,22 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="/Dashboard/Forum/styling.css">
+    <link rel="shortcut icon" href="image/favicon.ico" >
+    <link rel="stylesheet" href="css/styling.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta charset="utf-8">
     <title>FAQ Page</title>
   </head>
   <body>
 
-    <form class="faq" action="index.html" method="post">
+    <form class="faq" action="index.hbs" method="post">
       <h1 class="class1">Frequently Asked Questions</h1>
       <br>
       <br>
     </form>
     <div class="quests">
-      <button type="button" style="border: none;" class= "linux"  onclick="myFunction1()"><img  style="heigth:30px; width: 30px;"class="but" src="plus.jpg" alt="error">
+      <button type="button" style="border: none;" class= "linux"  onclick="myFunction1()"><img  style="heigth:30px; width: 30px;"class="but" src="image/plus.jpg" alt="error">
 Pension Policy
   </button>
     <div id="content1"><ul>
@@ -35,7 +31,7 @@ Pension Policy
     </div>
     </div>
     <div  class="quests">
-    <button type="button" style="border: none;" class= "windows" onclick="myFunction2()" ><img  style="heigth:30px; width: 30px;"class="but" src="plus.jpg" alt="error">
+    <button type="button" style="border: none;" class= "windows" onclick="myFunction2()" ><img  style="heigth:30px; width: 30px;"class="but" src="image/plus.jpg" alt="error">
 National Pension System(NPS)
 </button>
 <div id="content2"><ul>
@@ -49,7 +45,7 @@ National Pension System(NPS)
 
 
 <div  class="quests">
-<button type="button" style="border: none;" class= "" onclick="myFunction3()" ><img  style="heigth:30px; width: 30px;"class="but" src="plus.jpg" alt="error">
+<button type="button" style="border: none;" class= "" onclick="myFunction3()" ><img  style="heigth:30px; width: 30px;"class="but" src="image/plus.jpg" alt="error">
 Qualifying Service
 </button>
 <div id="content3"><ul>
@@ -89,6 +85,6 @@ function myFunction2() {
     }
 }
 </script>
-  <center><a href="forum_home.html"><h3>Click to go to Forums Page</h3></a> </center>
+  <center><a href="forum_home.hbs"><h3>Click to go to Forums Page</h3></a> </center>
   </body>
 </html>
