--- a/Server/views/Public/Dashboard/Forum/css/styling.css
+++ b/Server/views/Public/Dashboard/Forum/css/styling.css
@@ -32,11 +32,47 @@
   display: none;
 
 }
+#content1a{
+  display: none;
+
+}
+#content1b{
+  display: none;
+
+}
+#content1c{
+  display: none;
+
+}
 #content2{
   display: none;
 
 }
+#content2a{
+  display: none;
+
+}
+#content2b{
+  display: none;
+
+}
+#content2c{
+  display: none;
+
+}
 #content3{
+  display: none;
+
+}
+#content3a{
+  display: none;
+
+}
+#content3b{
+  display: none;
+
+}
+#content3c{
   display: none;
 
 }
