--- a/Server/views/Public/Dashboard/Forum/index.hbs
+++ b/Server/views/Public/Dashboard/Forum/index.hbs
@@ -15,76 +15,118 @@
       <br>
       <br>
     </form>
+    <!-- ------------first one -->
     <div class="quests">
-      <button type="button" style="border: none;" class= "linux"  onclick="myFunction1()"><img  style="heigth:30px; width: 30px;"class="but" src="image/plus.jpg" alt="error">
+
+      <button type="button" style="border: none;" class= "linux"  onclick="myFunction1('content1')"><img  style="heigth:30px; width: 30px;"class="but" src="image/plus.jpg" alt="error">
 Pension Policy
   </button>
-    <div id="content1"><ul>
 
-  <li><a href="#"><h4> Which  rules  govern  pension  and  gratuity  to  the  employees retiring  from  Central Government Civil Departments?</h4></a></li>
-  <li><a href="#"><h4> Is the date of voluntary retirement treated as duty?</h4>  </a></li>
-  <li><a href="#"><h4> Who is eligible for pension?</h4>  </a></li>
-  <li><a href="#"><h4> How is pension calculated?</h4> </a></li>
-  <li>  <a href="#"><h4> When can a Government servant apply for a voluntary retirement?</h4></a></li>
 
-        </ul>
+
+    <div id="content1"> <ol >
+<div class="content1a">
+  <b><li>
+<h4> <b>Which  rules  govern  pension  and  gratuity  to  the  employees retiring  from  Central Government Civil Departments?</b></h4></li></b>
+
+
+   <h4> Pension  and  gratuity  of  the  employees retiring  from  Central  Government  Departments is regulated  by the  Central  CivilServices  (Pension)  Rules,  1972.  There  are  separate  rules
+regarding pension and gratuity of Railway employees and Defence personnel.</h4>
+ </div>
+<br>
+
+<div class="content1b">
+<b> <li><h4><b>Is the date of voluntary retirement treated as duty?</b></h4>
+</li></b>
+
+
+<h4>Yes, the date of voluntary retirement is treated as duty (Rule 5).</h4>
+</div>
+
+<br>
+
+<div class="content1c">
+<b> <li><h4><b>Who is eligible for pension?</b> </h4></li></b>
+
+
+<h4>A Govt. servant appointed in  a pensionable establishment on or before  31.12.2003 and retires from Government service with a qualifying service of 10 years or more is eligible for pension (Rule 2, 49).</h4>
+</div>
+</ol>
     </div>
     </div>
+
+<!-- ------------------second one -->
     <div  class="quests">
-    <button type="button" style="border: none;" class= "windows" onclick="myFunction2()" ><img  style="heigth:30px; width: 30px;"class="but" src="image/plus.jpg" alt="error">
+    <button type="button" style="border: none;" class= "windows" onclick="myFunction1('content2')" ><img  style="heigth:30px; width: 30px;"class="but" src="image/plus.jpg" alt="error">
 National Pension System(NPS)
 </button>
-<div id="content2"><ul>
-<li><a href="#"><h4> What are the guidelines/orders in regard to settlement of dues of the deceased Government employees covered under NPS? </h4> </a></li>
-<li><a href="#"><h4> The  CCS(P)  Rules  are  applicable  to  govt.servants  appointed  on  or before 31.12.2003. Are   the   employees   who   joined pensionable establishments of  Govt.  of India  after 31/12/2003  eligible  for any benefits under these rules?</h4></a></li>
+<div id="content2"><ol>
+  <b><li><h4> <b>What are the guidelines/orders in regard to settlement of dues of the deceased Government employees covered under NPS?</b> </h4>
+</li></b>
+<div class="content1c">
+<h4> The  CCS(P)  Rules  are  applicable  to  govt.servants  appointed  on  or before 31.12.2003. Are   the   employees   who   joined pensionable establishments of  Govt.  of India  after 31/12/2003  eligible
+  for any benefits under these rules?</h4>
+</div>
 
-</ul>
+
+</ol>
 
 </div>
 </div>
 
-
+<!-- -----------------------third one -->
 <div  class="quests">
-<button type="button" style="border: none;" class= "" onclick="myFunction3()" ><img  style="heigth:30px; width: 30px;"class="but" src="image/plus.jpg" alt="error">
+<button type="button" style="border: none;" class= "" onclick="myFunction1('content3')" ><img  style="heigth:30px; width: 30px;"class="but" src="image/plus.jpg" alt="error">
 Qualifying Service
 </button>
-<div id="content3"><ul>
+<div id="content3"><ol>
 
-  <li><a href="#"><h4> Does all leave period qualify for pension and gratuity?</h4></a></li>
-<li><a href="#"> <h4> Is the benefit of counting of past service under Rule 19  available to ex-serviceman re-employed to civil service / post?</h4> </a></li>
-<li><a href="#"><h4> What happens to the past service of a Govt. servant (appointed before 1.1.2004) who resigns to take up, with proper permission, another appointment under the Govt.?</h4> </a></li>
-<li><a href="#"><h4> What  is  the  impact  of  resignation  (other  than  technical  resignation)  onqualifying service and pension</h4>  </a></li>
-
-</ul>
+  <b><li><h4> <b>Does all leave period qualify for pension and gratuity?</b> </h4></li></b>
+  <div class="content1c">
+  <h4>All   leave   for   which   leave   salary   is   payable   qualifies   for   pension   and   gratuity.   Extraordinary  leave  (EOL)  on  medical  certificate  (MC)    also  qualifies  for  pension  and gratuity.
+    EOL  without  MC  qualifies  only  on  account  of  inability  to  join  duty  on  civil commotion or when granted for a higher scientific & technical study qualifies.
+  </h4>
+  </div>
+<br>
+<b> <li><h4> <b>Is the benefit of counting of past service under Rule 19  available to ex-serviceman re-employed to civil service / post?
+</b></h4></li></b>
+<div class="content1c">
+<h4>An  ex-serviceman  re-employed  to  the  Civil    Post  /  service  on  or  before  31/12/2003    is covered  under  the  CCS  (Pension)  Rules,  1972.    Therefore  the  benefit  of  Rule  19  also
+becomes automatically available to him.
+An ex-serviceman re-employed in civil service on or after1/1/2004  is covered by the National Pension System and is not covered under the
+CCS  (Pension)  Rules,  1972.  Therefore  the  benefit  of  Rule  19  is  not  available  to  the  ex-serviceman on re-employment on or after 1/1/2004.
+</h4>
+</div>
+<br>
+ <b><li><h4> <b>What happens to the past service of a Govt. servant (appointed before 1.1.2004) who resigns to take up, with proper permission, another appointment under the Govt.?
+</b></h4></li></b>
+<div class="content1c">
+<h4>Under  Rule  26  (2)“A resignation shall not entail forfeiture of past service if it has been submitted to take up, with proper permission, another appointment, whether temporary or permanent, under the Government where service qualifies”.
+  This also applies to a Govt. servant who joined Govt. service before 1/1/2004 and takes up another appointment in the Govt., on or after 1.1.2004
+</h4>
+</div>
+<br>
+<b><li><h4> <b>What  is  the  impact  of  resignation  (other  than  technical  resignation)  onqualifying service and pension</b></h4></li></b>
+<div class="content1c">
+<h4>Resignation(other than technical resignation)entails forfeiture of past service. Therefore, no pension is payable on such resignation.
+</h4>
+</div>
+</ol>
 </div>
 </div>
 <script>
-function myFunction3() {
-var x = document.getElementById("content3");
-if (x.style.display === "none") {
-    x.style.display = "block";
-} else {
-    x.style.display = "none";
-}
+
+
+function myFunction1(id) {
+    var x = document.getElementById(id);
+    if (x.style.display === "none") {
+        x.style.display = "block";
+    } else {
+        x.style.display = "none";
+    }
 }
 
-function myFunction1() {
-    var x = document.getElementById("content1");
-    if (x.style.display === "none") {
-        x.style.display = "block";
-    } else {
-        x.style.display = "none";
-    }
-}
-function myFunction2() {
-    var x = document.getElementById("content2");
-    if (x.style.display === "none") {
-        x.style.display = "block";
-    } else {
-        x.style.display = "none";
-    }
-}
 </script>
-  <center><a href="forum_home.hbs"><h3>Click to go to Forums Page</h3></a> </center>
+  <center><a href="forum_cat.html"><h3>Click to go to Forums Page</h3></a> </center>
   </body>
 </html>
