--- a/Server/views/Public/Home/Aunthentication/Login.hbs
+++ b/Server/views/Public/Home/Aunthentication/Login.hbs
@@ -38,7 +38,7 @@
                     <a class="hiddenanchor" id="tologin"></a>
                     <div id="wrapper">
                         <div id="login" class="animate form">
-                            <form  action="/otp" autocomplete="on">
+                            <form  action="/login" autocomplete="on" method="post">
                                 <h1>Log in</h1>
                                 <p>
                                     <label for="username" class="uname" data-icon="u" > Your email or username </label>
