--- a/Server/views/Public/Home/Aunthentication/Signup.hbs
+++ b/Server/views/Public/Home/Aunthentication/Signup.hbs
@@ -38,19 +38,19 @@
                     <a class="hiddenanchor" id="tologin"></a>
                     <div id="wrapper">
                         <div id="login" class="animate form">
-                            <form  action="/otp" autocomplete="on">
+                            <form  action="/signup" autocomplete="on" method="post">
                                       <h1> Sign up </h1>
                                       <p>
-                                          <label for="usernamesignup" class="uname" data-icon="u">Your username</label>
-                                          <input id="usernamesignup" name="usernamesignup" required="required" type="text" placeholder="mysuperusername690" />
+                                          <label for="username" class="uname" data-icon="u">Your username</label>
+                                          <input id="usernamesignup" name="username" required="required" type="text" placeholder="mysuperusername690" />
                                       </p>
                                       <p>
-                                          <label for="emailsignup" class="youmail" data-icon="e" > Your email</label>
-                                          <input id="emailsignup" name="emailsignup" required="required" type="email" placeholder="mysupermail@mail.com"/>
+                                          <label for="email" class="youmail" data-icon="e" > Your email</label>
+                                          <input id="emailsignup" name="email" required="required" type="email" placeholder="mysupermail@mail.com"/>
                                       </p>
                                       <p>
-                                          <label for="passwordsignup" class="youpasswd" data-icon="p">Your password </label>
-                                          <input id="passwordsignup" name="passwordsignup" required="required" type="password" placeholder="eg. X8df!90EO"/>
+                                          <label for="password" class="youpasswd" data-icon="p">Your password </label>
+                                          <input id="passwordsignup" name="password" required="required" type="password" placeholder="eg. X8df!90EO"/>
                                       </p>
                                       <p>
                                           <label for="passwordsignup_confirm" class="youpasswd" data-icon="p">Please confirm your password </label>
