--- a/Server/views/Public/Home/Aunthentication/otp.hbs
+++ b/Server/views/Public/Home/Aunthentication/otp.hbs
@@ -38,7 +38,7 @@
                     <a class="hiddenanchor" id="tologin"></a>
                     <div id="wrapper">
                         <div id="login" class="animate form">
-                            <form  action="www.google.com" autocomplete="on">
+                            <form  action="/otp" autocomplete="on" method="post">
                                       <h1> OTP Verification </h1>
                                       <p>
                                           <label for="otp" class="uname" data-icon="u">OTP sent to your email id</label>
