--- a/Server/views/Public/Home/home.hbs
+++ b/Server/views/Public/Home/home.hbs
@@ -30,10 +30,18 @@ body {font-size:16px;}
     <a href="/FAQ" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">FAQ</a>
     <a href="../Dashboard/Forum/forum_home.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Forum</a>
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="/dr-calc" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">DR Calculator</a>
+    <a href="/gratuity-calc" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Gratuity Calculator</a>
+    <a href="/pen-calc" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Pension Calculator</a>
 
     <a href="/login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Login</a>
     <a href="/signup" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Signup</a>
-
+    <footer>
+      <div id="bottommost">
+    <a href="https://www.linkedin.com/in/clayton-sohan-pereira-ab4636159/" >Clayton Pereira</a>|
+      <a href="https://www.linkedin.com/in/solomon-jose-43208815a/" >Solomon Jose</a>|
+        <a href="https://www.facebook.com/royston.pinto.58" >Royston Pinto</a></footer>
+      </div>
   </div>
 </nav>
 
@@ -67,11 +75,11 @@ body {font-size:16px;}
   <!-- Photo grid (modal) -->
   <div class="w3-row-padding">
 
-      <p>With a view to bring into existence a centrally controlled administered mechanism involving Pensioners Associations in the country, the Pensioners' Portal would function as a single window mechanism
+      <p><h3>With a view to bring into existence a centrally controlled administered mechanism involving Pensioners Associations in the country, the Pensioners' Portal would function as a single window mechanism
 
   The  department  of Pension & Pensioners'  Welfare  is  the nodal department  for  formulation of policies  relating  to pension & other retirement benefits of Central Government Pensioners/Family Pensioners. It also serves as a forum for redress of Pensioners' Grievances
       incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </p>
+    </h3></p>
   </div>
 
   <!-- Modal for full size images on click-->
@@ -87,10 +95,10 @@ body {font-size:16px;}
   <div class="w3-container" id="services" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Organisation</b></h1>
     <hr style="width:500px;border:5px solid red" class="w3-round">
-      <p>WThe Department of Pension & Pensioners' Welfare is the nodal department for formulation of policies relating to pension and other retirement benefits of Central Govt. employees covered under CCS (Pension) Rules, 1972 Apart from formulation of pension policy for the Central Govt. Pensioners/Family Pensioners, it also seeks to promote pensioners welfare and serves as a forum for the redressal of Pensioners' grievances.
+      <p><h3>WThe Department of Pension & Pensioners' Welfare is the nodal department for formulation of policies relating to pension and other retirement benefits of Central Govt. employees covered under CCS (Pension) Rules, 1972 Apart from formulation of pension policy for the Central Govt. Pensioners/Family Pensioners, it also seeks to promote pensioners welfare and serves as a forum for the redressal of Pensioners' grievances.
 
 However, the pensioners of Ministries of Railways and Defence are governed by their respective pension rules having their independent administrative set up. The employees working in the establishments belonging to the class of industries/ other establishment listed in the schedule appended to EPF & MP Act.1950 are covered under EPS Scheme administered by Ministry of Labour. Further, the pensionary matters of those who joined/ would join Central Government on or after 1.1.2004, are dealt by Ministry of Finance under New Pension scheme
-    </p>
+</h3></p>
   </div>
 
   <!-- Designers -->
@@ -98,70 +106,70 @@ However, the pensioners of Ministries of Railways and Defence are governed by th
     <h1 class="w3-xxxlarge w3-text-red"><b>All About Pension</b></h1>
     <hr style="width:500px;border:5px solid red" class="w3-round">
     <p>The best team in the world.</p>
-    <p>Superannuation
+    <p><h3>Superannuation
 A superannuation pension shall be granted to a Government servant who is retired on his attaining the age of superannuation.
-
+<br>
 Retiring Pension:
-
+<br>
 A retiring pension shall be granted to a Government servant who retires, or is retired before attaining the age of Superannuation or to a Government servant who, on being declared surplus opts, for voluntary retirement.
-
+<br>
 Voluntary Retirement:
-
+<br>
 Any Government servant can apply for voluntary retirement, three months in advance, only after the completion of twenty years of his qualifying service, provided there is no vigilance or Departmental Enquiry pending /initiated against him/her.
-
+<br>
 Invalid Pension:
-
+<br>
 Invalid Pension may be granted if a Government servant applies for retirement from the service on account of any bodily or mental infirmity which permanently incapacitates him/her for the service. The request for invalid pension has to be supported by medical report from the competent medical board.
-
+<br>
 Compensation Pension:
-
+<br>
 If a Government servant is selected for discharge owing to the abolition of a permanent post, he shall, unless he is appointed to another post the conditions of which are deemed by the authority competent to discharge him/her to be at least equal to those of his own, have the option.
-
+<br>
 (a) of taking compensation pension to which he may be entitled for the service he had rendered, or
-
+<br>
 (b) of accepting another appointment on such pay as may be offered and continuing to count his previous service for pension.
-
+<br>
 Compulsory Retirement Pension:
-
+<br>
 A Government servant compulsorily retired from service as a penalty may be granted, by the authority competent to impose such penalty, pension or gratuity, or both at a rate not less than two-thirds and not more than full compensation pension or gratuity, or both admissible to him on the date of his compulsory retirement. The pension granted or allowed shall not be less than Rs. 9,000/- p.m.
-
+<br>
 Compassionate Allowance:
-
+<br>
 (i) A Government servant who is dismissed or removed from service shall forfeit his pension and gratuity:
-
+<br>
 Provided that the authority competent to dismiss or remove him from service may, if the case is deserving of special consideration, sanction a compassionate allowance not exceeding two-thirds of pension or gratuity or both which would have been admissible to him if he had retired on compensation pension.
-
+<br>
 (ii) A compassionate allowance sanctioned under the proviso to sub-rule (i) shall not be less than Rs. 9,000/- p.m.
-
+<br>
 Extraordinary Pension:
-
+<br>
 Extraordinary Pension in the form of Disability pension/extraordinary family pension may be paid to the Government servant/his family if disablement/death (or the aggravation of disablement/death)of the Government servant, during his service, are attributed to the Government service. For the award of extraordinary pension, there should thus be a casual connection between disablement and Government service; and death and Government service, for attributability or aggravation to be conceded. The quantum of the pension, however,depends upon the category of the disablement/death.
-
+<br>
 Government servants appointed on or after 1.1.2004 are not covered by the CCS(Extraordinary Pension) Rules.
-
+<br>
 Family Pension:
-
+<br>
 Family pension is granted to the widow / widower and where there is no widow / widower to the children of a Government servant who entered in service in a pensionable establishment on or after 01/01/1964 but on or before 31.12.2003 or having entered service prior to that date came to be governed by the provisions of the Family Pension Scheme for Central Government Employees, 1964 if such a Government servant-
-
+<br>
 (i) dies while in service on or after 01/01/1964 or
-
+<br>
 (ii) retired/died before 31.12.1963 or
-
+<br>
 (iii) retires on or after 01/01/1964
-
+<br>
 and at the time of his death was in receipt of pension.
-
+<br>
 Family pension is payable to the children up to 25 years of their age, or marriage or till they start earning a monthly income exceeding Rs.9,000/- +  DA admissible from time to time p.m. whichever is earlier.
-
+<br>
 Widow daughter / divorced daughter/ unmarried daughter of deceased Government servant is also entitled for the family pension till her remarriage or up to life time or starts earning a monthly income exceeding Rs.9,000/- +  DA admissible from time to time p.m. whichever is earlier.
-
+<br>
 Family pension is payable to wholly dependent parents of the deceased Government servants w.e.f. 01/01/98, when he/she is not survived by a widow or eligible child. The family pension will be payable to mother first , failing which to the father.
-
+<br>
 If the son or daughter, of a Government servant is suffering from any disorder or disability of mind or is physically crippled or disabled so as to render him or her unable to earn a living even after attaining the age of 25 years, the family pension can continue to be paid for life time subject to  conditions.
+<br>
 
-
-    </p>
-    <p><b>Our designers are thoughtfully chosen</b>:</p>
+</h3></p>
+    <p><b></b>:</p>
   </div>
 
   <!-- The Team -->
@@ -171,10 +179,10 @@ If the son or daughter, of a Government servant is suffering from any disorder o
   <div class="w3-container" id="packages" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Pension Payment Scheme.</b></h1>
     <hr style="width:500px;border:5px solid red" class="w3-round">
-    <p>Swatantra Sainik Samman Pension Scheme, 1980 (Salient Features)
-Scheme for payment of pensions to Central Government Civil pensioners through authorised Banks
-Defined Contribution Pension Scheme (National Pension System)
-National Social Assistance Programme(NSAP) administered by Ministry of Rural Development</p>
+    <p><h3>Swatantra Sainik Samman Pension Scheme, 1980 (Salient Features)
+<br>Scheme for payment of pensions to Central Government Civil pensioners through authorised Banks
+<br>Defined Contribution Pension Scheme (National Pension System)
+<br>National Social Assistance Programme(NSAP) administered by Ministry of Rural Development</h3></p>
   </div>
 <!--
   <div class="w3-row-padding">
@@ -220,7 +228,7 @@ National Social Assistance Programme(NSAP) administered by Ministry of Rural Dev
     <h1 class="w3-xxxlarge w3-text-red"><b>Contact.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <p>Do you want us to style your home? Fill out the form and fill me in with the details :) We love meeting new people!</p>
-    <form action="/action_page.php" target="_blank">
+    <form action="/home" method="post" >
       <div class="w3-section">
         <label>Name</label>
         <input class="w3-input w3-border" type="text" name="Name" required>
