--- a/Server/views/Public/Dashboard/PensionScheme/applicationAddress.hbs
+++ b/Server/views/Public/Dashboard/PensionScheme/applicationAddress.hbs
@@ -4,7 +4,7 @@
   <!DOCTYPE html>
 <html>
 <body>
-  <form action="('/user/Pension/applicationAddress" id="EmploymentApplication100" method="post" onsubmit="return ValidateForm(this);">
+  <form action="/user/Pension/applicationAddress" id="EmploymentApplication100" method="post" onsubmit="return ValidateForm(this);">
   <h1>Application Form for National Pension Scheme</h1>
   <h2>3.ADDRESS DETAILS*</h2>
   <h3>3.1 CORRESPONDENCE ADDRESS DETAILS*</h3>
@@ -29,10 +29,7 @@
   <td><label for="building"><b>Premises/Building/Village</b></label>
   <td><input name="building" type="text" maxlength="50" style="width: 260px" />
 </tr>
-<tr>
-<td><label for="building"><b>Premises/Building/Village</b></label>
-<td><input name="building" type="text" maxlength="50" style="width: 260px" />
-</tr>
+
 <tr>
 <td><label for="Road"><b>Road/Street/Lane</b></label>
 <td><input name="Road" type="text" maxlength="50" style="width: 260px" />
