--- a/Server/views/Public/Dashboard/PensionScheme/applicationWorkBank.hbs
+++ b/Server/views/Public/Dashboard/PensionScheme/applicationWorkBank.hbs
@@ -33,12 +33,12 @@
   </tr>
 
   <tr>
-  <td><label for="Income"><b> Educational Qualifications</b></label></td>
+  <td><label for="educational_qualifications"><b> Educational Qualifications</b></label></td>
     <td><input name="Income" type="radio" value=" Below SSC" checked="checked" /> Below SSC
-    <input name="Income" type="radio" value="SSC" />SSC
-    <input name="Income" type="radio" value="HSC" />HSC
-    <input name="Income" type="radio" value="Graduate" />Graduate
-    <input name="Income" type="radio" value="Masters" />Masters
+    <input name="educational_qualifications" type="radio" value="SSC" />SSC
+    <input name="educational_qualifications" type="radio" value="HSC" />HSC
+    <input name="educational_qualifications" type="radio" value="Graduate" />Graduate
+    <input name="educational_qualifications" type="radio" value="Masters" />Masters
   </tr>
   <tr>
   <td><label for="politics"><b> Please Tick If Applicable Politically exposed person Related to Politically exposed Person</b></label></td>
@@ -54,7 +54,7 @@
   </tr>
   <tr>
   <td><label for="BankAccNO."><b>Bank A/c Number *</b></label></td>
-  <td><input name="BankNO." type="text" maxlength="50" style="width: 260px" /></td>
+  <td><input name="BankNO" type="text" maxlength="50" style="width: 260px" /></td>
   </tr>
   <tr>
   <td><label for="BranchName"><b>Branch Name *</b></label></td>
